fix maxItems == 0, really ensure no items are remembered

* fix maxItems == 0 avoids inserting of any item
* fix that maxItems can be negative, code doesn't handle that

BUG: 421391